DEFEDIT-1533 Cleaning up, initialising